fix: adjust loading text in wrapped (merge request !737)
Squash merge branch 'fix/table-loading' into 'develop'

* fix: adjust loading text in wrapped

--- a/style/web/components/loading/_index.less
+++ b/style/web/components/loading/_index.less
@@ -36,6 +36,20 @@
 
   &-mask {
     background-color: @loading-mask-color;
+
+    &-text {
+      position: relative;
+      top: 50%;
+      margin-top: @loading-wrapper-icon-margin-top;
+
+      .@{prefix}-icon-loading {
+        position: unset;
+      }
+
+      .@{prefix}-loading-text {
+        margin-top: @loading-wrapper-icon-margin-top;
+      }
+    }
   }
 
   &-fullscreen {
